# wip

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: quality_check.yml
cmake/: gtest.cmake  helpers.cmake
cmd/hello_world/: CMakeLists.txt  main.cpp
test/HelloWorld/: CMakeLists.txt  HelloWorldTest.cpp
